--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,10 @@ spring.application.name=echoeco
 
 spring.profiles.include=oauth
 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/eco
-spring.datasource.username=root
-spring.datasource.password=rootpw
-
-
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.session.store-type=jdbc
 
-
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
