--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
+	implementation 'org.testcontainers:localstack'
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.749'
+
 	compileOnly 'org.projectlombok:lombok'
 	implementation 'mysql:mysql-connector-java:8.0.32'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'com.h2database:h2'
+	testImplementation 'cloud.localstack:localstack-utils:0.2.20'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
