file size Max 30MB 로 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.session.store-type=jdbc
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.servlet.multipart.maxFileSize = 30MB
+spring.servlet.multipart.maxRequestSize = 30MB
