--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+	implementation 'org.slf4j:slf4j-api:2.0.13'
+	implementation 'ch.qos.logback:logback-classic:1.5.6'
+	implementation 'ch.qos.logback:logback-core:1.5.6'
 
 	//query dsl
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
