common-logging 충돌 부분 수정

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ configurations {
 	}
 }
 
+configurations.configureEach {
+	exclude group: 'commons-logging', module: 'commons-logging'
+}
+
 repositories {
 	mavenCentral()
 }
